# server/docs/swagger.json
@@ -11,7 +11,7 @@
     "host": "http://84.23.53.216:8001/",
     "paths": {
         "/auth": {
-            "post": {
+            "get": {
                 "description": "checking auth",
                 "consumes": [
                     "application/json"
@@ -20,7 +20,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authorization"
+                    "users"
                 ],
                 "summary": "checking auth",
                 "parameters": [
@@ -48,7 +48,7 @@
         },
         "/login": {
             "post": {
-                "description": "Login user",
+                "description": "Log in user",
                 "consumes": [
                     "application/json"
                 ],
@@ -56,12 +56,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authorization"
+                    "users"
                 ],
-                "summary": "Login user",
+                "summary": "Log in user",
                 "parameters": [
                     {
-                        "description": "Logining user",
+                        "description": "user object for login",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -93,7 +93,7 @@
             }
         },
         "/logout": {
-            "post": {
+            "get": {
                 "description": "Log out user",
                 "consumes": [
                     "application/json"
@@ -102,7 +102,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authorization"
+                    "users"
                 ],
                 "summary": "Log out user",
                 "parameters": [
@@ -115,8 +115,8 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "success log out"
+                    "200": {
+                        "description": "void\" \"success log out"
                     },
                     "400": {
                         "description": "bad request",
@@ -133,7 +133,7 @@
             "get": {
                 "description": "giving array of restaurants",
                 "consumes": [
-                    "application/json"
+                    "*/*"
                 ],
                 "produces": [
                     "application/json"
@@ -160,7 +160,7 @@
             }
         },
         "/users": {
-            "get": {
+            "post": {
                 "description": "Signing up a user",
                 "consumes": [
                     "application/json"
@@ -169,7 +169,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "users"
                 ],
                 "summary": "Signing up a user",
                 "parameters": [
@@ -206,28 +206,28 @@
         "store.Restaurant": {
             "type": "object",
             "properties": {
-                "category": {
+                "Category": {
                     "type": "string"
                 },
-                "commentsCount": {
+                "CommentsCount": {
                     "type": "integer"
                 },
-                "deliveryPrice": {
+                "DeliveryPrice": {
                     "type": "integer"
                 },
-                "deliveryTime": {
+                "DeliveryTime": {
                     "type": "integer"
                 },
-                "icon": {
+                "ID": {
+                    "type": "integer"
+                },
+                "Icon": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
+                "Name": {
                     "type": "string"
                 },
-                "rating": {
+                "Rating": {
                     "type": "number"
                 }
             }
@@ -235,22 +235,22 @@
         "store.User": {
             "type": "object",
             "properties": {
-                "birthday": {
+                "Birthday": {
                     "type": "string"
                 },
-                "email": {
+                "Email": {
                     "type": "string"
                 },
-                "id": {
+                "ID": {
                     "type": "integer"
                 },
-                "password": {
+                "Password": {
                     "type": "string"
                 },
-                "phoneNumber": {
+                "PhoneNumber": {
                     "type": "string"
                 },
-                "username": {
+                "Username": {
                     "type": "string"
                 }
             }
